# ViProxyBot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: vpnbot.db-shm  vpnbot.db-wal
docs/: 00-overview-and-architecture.md  01-product-rebuild-plan.md  README.md  current-state-audit.md  operator-runbook.md  phase-1-mvp.md  phase-1-playbook.md  phase-2-expansion.md  phase-2-playbook.md  phase-3-playbook.md  phase-3-production.md  user-guide.md
scripts/: install.sh  restore.sh  uninstall.sh  update.sh  vpnbot-ctl
src/: cli.py  config.py  main.py
src/database/: __init__.py  connection.py  repositories.py  schema.py
src/domain/: __init__.py  audit.py  capability.py  enums.py  exceptions.py  models.py
src/infrastructure/: __init__.py  alerting.py  http_client.py  rate_limiter.py  secret_store.py  shell_runner.py  ssl_manager.py  updater.py
src/infrastructure/protocols/: __init__.py  base.py
src/interface/telegram/: __init__.py  bot.py  callback_router.py  commands.py  i18n.py  (+2 more)
src/services/: __init__.py  backup_service.py  health_checker.py  protocol_registry.py  traffic_collector.py
tests/: conftest.py  test_audit.py  test_capability.py  test_cli.py  test_config_writer.py  test_domain.py  test_hysteria2_adapter.py  test_hysteria2_config_writer.py  test_hysteria2_link_generator.py  test_mtproto_adapter.py  test_mtproto_link_generator.py  test_rate_limiter.py  test_schema_migration.py  test_secret_store.py  test_shell_runner.py  test_vless_adapter.py  test_vless_link_generator.py
(+12 files in other folders)
