[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viproxybot"
version = "0.1.0"
description = "Telegram bot for VPN server management"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1,<4.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "cryptography>=42.0.0,<44.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "httpx>=0.25.0,<1.0.0",
  "pyyaml>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.11.0,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "types-pyyaml>=6.0.0,<7.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
packages = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = false
disable_error_code = ["union-attr"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
